2009-08-26  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#134962 - Device gets stuck showing rotated image
	
	* src/util/hd-transition.c: Make sure we reset the rotation values
	  after the transition, as it seems in some strange cases, 
	  clutter-timeline may not execute the final element in the timeline,
	  leaving the screen slightly (or very!) rotated.

2009-08-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.93

2009-08-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#135094 Infonote and banner tuneups phase 3

	* src/util/hd-transition.c (hd_transition_fade,
	on_fade_timeline_new_frame):
	  Changed the transition for info notes and banners to slide them
	  from/to the top.

2009-08-25  Gordon Williams <gordon.williams@collabora.co.uk>

	Release 2.2.92

	Fixes: NB#134958 - Task switcher button in portrait mode is the wrong 
	                   size
	* src/home/hd-title-bar.c: Now set left_width to the actual button
	  width, rather than the width of the button image.

	Fixes: NB#134348 - black rectangle flickers for notifications in
	                   non-composited mode
	* src/mb/hd-note.c: Now move notifications off the screen if created
	  in non-composited mode. See the comments next to the changes as to 
	  why changing stacking order does not work.

	Fixes: NB#134956 - infonote + banner tuneups
	* data/transitions.ini: Changed transparency of infonotes and banners
	  from 20% from 15%

2009-08-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.91

2009-08-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-title-bar (hd_title_bar_init):
	  Minor typo correction just to commit something today.

2009-08-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#134286 - can't switch from maps using onscreen button
	* src/home/hd-render-manager.c: Now we check the whole clutter tree
	  for visibility before setting the input mask for an button. This